--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "perpetual-pizza",
   "version": "1.0.0",
-  "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte);",
-  "main": "index.js",
+  "description": "The Never Ending Digital Pizza.",
+  "main": "src/index.html",
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
@@ -22,8 +22,23 @@
   "devDependencies": {
     "lit-element": "^2.4.0",
     "parcel-bundler": "^1.12.5",
+    "parcel-plugin-pwa-manifest": "^3.0.10",
     "typescript": "^4.2.4"
   },
-  "dependencies": {
+  "dependencies": {},
+  "pwaManifest": {
+    "name": "Perpetual Pizza",
+    "shortName": "Perpetual Pizza",
+    "startURL": "./",
+    "theme": "#d00000",
+    "generateIconOptions": {
+      "baseIcon": "./src/assets/icon.svg",
+      "sizes": [
+        192,
+        384,
+        512
+      ],
+      "genFavicons": true
+    }
   }
 }
