Fixed video not playing on mobile.

--- a/package.json
+++ b/package.json
@@ -20,36 +20,9 @@
   },
   "homepage": "https://github.com/wrux/perpetual-pizza#readme",
   "devDependencies": {
-    "lit-element": "^2.4.0",
+    "lit-element": "^2.5.1",
     "parcel-bundler": "^1.12.5",
-    "parcel-plugin-pwa-manifest": "^3.0.10",
-    "parcel-plugin-sw-cache": "^0.3.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.5"
   },
-  "dependencies": {},
-  "cache": {
-    "swDest": "service-worker.js",
-    "globPatterns": ["**/*.{html,js,css,webp,png,mp4}"],
-    "navigateFallback": "/index.html",
-    "templatedURLs": {
-      "/": ["index.html"]
-    }
-  },
-  "pwaManifest": {
-    "name": "Perpetual Pizza",
-    "shortName": "Perpetual Pizza",
-    "startURL": "./",
-    "theme": "#d00000",
-    "generateIconOptions": {
-      "appleTouchIconBG": "#ffffff",
-      "appleTouchIconPadding": 24,
-      "baseIcon": "./src/assets/icon.svg",
-      "genFavicons": true,
-      "sizes": [
-        192,
-        384,
-        512
-      ]
-    }
-  }
+  "dependencies": {}
 }
