--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
   "name": "perpetual-pizza",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "The Never Ending Digital Pizza.",
-  "main": "src/index.html",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "del dist",
+    "dev:postcss": "postcss src/_assets/*.css -o src/static/app.compiled.css --watch --verbose",
+    "dev:scripts": "webpack --watch --config webpack.config.js",
+    "dev:11ty": "eleventy --serve --watch",
+    "build:postcss": "NODE_ENV=production postcss src/_assets/app.css -o src/_includes/app.compiled.css",
+    "build:scripts": "NODE_ENV=production webpack --config webpack.config.js",
+    "build:11ty": "ELEVENTY_ENV=production eleventy",
+    "start": "run-p dev:* --print-label",
+    "build": "run-s clean build:* --print-label"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wrux/perpetual-pizza.git"
-  },
-  "keywords": [],
-  "author": "",
+  "author": "Callum Bonnyman",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wrux/perpetual-pizza/issues"
-  },
-  "homepage": "https://github.com/wrux/perpetual-pizza#readme",
   "devDependencies": {
-    "lit-element": "^2.5.1",
-    "parcel-bundler": "^1.12.5",
-    "typescript": "^4.3.5"
-  },
-  "dependencies": {}
+    "@11ty/eleventy": "^0.12.1",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "autoprefixer": "^10.2.6",
+    "babel-loader": "^8.2.2",
+    "del-cli": "^4.0.0",
+    "html-minifier": "^4.0.0",
+    "luxon": "^1.27.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.5",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.2",
+    "webpack": "^5.41.0",
+    "webpack-cli": "^4.7.2"
+  }
 }
