--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "postcss-import": "^14.0.2",
     "webpack": "^5.41.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "hls.js": "^1.0.7"
   }
 }
